@@ -62,6 +62,11 @@ Core and Builtins
 Library
 -------
 
+Windows
+-------
+
+- Issue #25715: Python 3.5.1 installer shows wrong upgrade path and incorrect
+  logic for launcher detection.
 
 What's New in Python 3.5.1 release candidate 1?
 ===============================================
